# traildb-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
ci/: before_install.sh
examples/: simple.rs  wiki.rs  wiki_pretty.rs
src/: lib.rs
src/ffi/include/: traildb.h
traildb-sys/: .gitignore  Cargo.toml  README.md  build.rs
traildb-sys/src/: lib.rs
