[package]
authors = ["Jay Kickliter <jay@kickliter.com>", "Kenan Sulayman <kenan@sly.mn>", "Knut Nesheim <knutin@gmail.com>"]
build = "build.rs"
name = "traildb"
version = "0.3.0"

description = "Binding for TrailDB, an efficient tool for storing and querying series of events."
license = "MIT"

documentation = "https://docs.rs/traildb/0.3.0/traildb/"
repository = "https://github.com/traildb/traildb-rust.git"

[build-dependencies]
bindgen = "^0.20.2"

[dependencies]
clang-sys = "0.12.0"
libc = "0.2.21"

[dev-dependencies]
prettytable-rs = "0.6.6"
uuid = { version = "0.4.0", features = ["v4"] }
tempdir = "*"