[package]
authors = ["Jay Kickliter <jay@kickliter.com>", "Kenan Sulayman <kenan@sly.mn>", "Knut Nesheim <knutin@gmail.com>"]
build = "build.rs"
name = "traildb"
version = "0.6.0"

description = "Binding for TrailDB, an efficient tool for storing and querying series of events."
license = "MIT"

documentation = "https://docs.rs/traildb/0.4.0/traildb/"
repository = "https://github.com/traildb/traildb-rust.git"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
clang-sys = "0.28.1"
libc = "0.2.64"
traildb-sys = "0.6.3"

[dev-dependencies]
prettytable-rs = "0.8.0"
uuid = { version = "0.7.4", features = ["v4"] }
tempdir = "0.3.7"
