[package]
name = "traildb-sys"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>","Kenan Sulayman <kenan@sly.mn>"]
description = "Low level bindings to traildb"
readme = "readme.md"
license = "MIT"
version = "0.6.4"
edition = "2018"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"
libflate = "0.1"
pkg-config = "0.3"
tar = "0.4"
bindgen = "0.70.1"
